# rusty_viking

./: Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/error/: into_diagnostic_with_location.rs  mod.rs  serde_json_error.rs
src/physics/: mod.rs  point.rs  vector.rs  x.rs  y.rs  z.rs
