[package]
name = "rusty_viking"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "./README.md"
description = "A libraty full of my shared implementations."
exclude = ["src/main.rs"]
repository = "https://github.com/Ozy-Viking/rusty_viking"
documentation = "https://docs.rs/rusty_viking/latest/rusty_viking/"

[dependencies]
viking_macros = { version = "0.2", optional = true }
miette = { version = "7.6.0", features = ["fancy"], optional = true }
thiserror = { version = "2.0.12", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "local-time",
    "env-filter",
], optional = true }
valuable = { version = "0.1.1", features = ["derive"], optional = true }

[features]
default = [
    "serde",
    "miette",
    "macros",
    "error",
    "tracing",
    "valuable",
    "physics",
]
serde = ["serde/derive", "dep:serde_json", "miette", "dep:thiserror"]
macros = ["dep:viking_macros"]
miette = ["dep:miette", "dep:thiserror", "error"]
tracing = ["dep:tracing-subscriber"]
valuable = ["dep:valuable", "tracing/valuable"]
error = []
physics = []

[profile.release]
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
